--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <div>
         <input type="text" id="input"/>
-        <button id="addTodo">タスクを追加</button>
+        <button id="addTodo">ToDoを追加</button>
     </div>
     <div>
-        <ul id="todolist"></ul>
+        <ul id="todoList"></ul>
     </div>
     <script 
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" 
